# SigmaHouse

./: .gitignore  2023-04-24_22-57_IoT_and_Smart_Home_Semilab_for_Sigmacamp_2023.md  breath_led.py  button.py  button_2.py  fan.py  hello.py  led.py  music.py  music_alert.py  pir.py  pir_motion.py  pir_motion_alarm.py  pj9_1_XHT11.py  test_window.py  wifi.py
display/: button_wifi.py  motion_wifi.py  test_lcd.py  test_lcd_wifi.py
lesha2/: LICENSE.md  README.md  Sigma_IoT_Labs.code-workspace  misc.txt  pyproject.toml
lesha2/examples/day1/: wifi.py  wifi_register.py
lesha2/examples/day2/: button1.py  button2.py  button3.py  button4.py  button5.py  button6.py  button_led1.py  button_led2.py  button_led3.py  button_led4.py  button_led5.py  led1.py  led2.py  led3.py  uptime.py
lesha2/iot_hub_mockup/: app.py  houses.py  swagger.yml
lesha2/iot_hub_mockup/static/: sigma_state.js
lesha2/iot_hub_mockup/templates/: hello_world.html  index.html
lesha2/smart_house/: __init__.py  main.py  main_test.py  secrets.py
lesha2/smart_house/core/: __init__.py  app.py  app_test.py  menu.py  wifi.py
lesha2/smart_house/devices/: __init__.py  button.py  buzzer.py  device.py  lcd_api.py  lcd_i2c.py  led.py  motion.py  music.py
server/calculator/: main.py  qtdata.db
server/calculator/static/: qtc-calc.js
server/calculator/templates/: index.html
server/sigma/: sigma_server.py
server/sigma/mdds/standalone/: test.json  test0.json  test1.json
server/sigma/static/: sigma_state.js
server/sigma/templates/: houses.html  houses_1.html  houses_org.html  index.html  index_soc.html
